fix hero img from squishing on smaller devices

--- a/style.css
+++ b/style.css
@@ -102,7 +102,8 @@ a {
 }
 
 .hero-img img {
-  /* width: 100%; */
+  object-fit: cover;
+  width: 100%;
   height: 250px;
 }
 .cta-btn {
